// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SubscriptionCard should not render hasRole 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="subscriptions-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-9"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Subscriptions
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <dl
            aria-label="Subscriptions title"
            class="pf-v6-c-description-list pf-m-3-col"
            data-ouia-component-id="Subscriptions title"
          >
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Usage
                </span>
              </dt>
              <dd
                aria-label="Usage value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Usage value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  Development
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  SLA
                </span>
              </dt>
              <dd
                aria-label="SLA value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="SLA value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  Self-Support
                </div>
              </dd>
            </div>
          </dl>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SubscriptionCard should not render hasSLA 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="subscriptions-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-7"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Subscriptions
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <dl
            aria-label="Subscriptions title"
            class="pf-v6-c-description-list pf-m-3-col"
            data-ouia-component-id="Subscriptions title"
          >
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Usage
                </span>
              </dt>
              <dd
                aria-label="Usage value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Usage value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  Development
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Role
                </span>
              </dt>
              <dd
                aria-label="Role value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Role value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  Red Hat Enterprise Linux Server
                </div>
              </dd>
            </div>
          </dl>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SubscriptionCard should not render hasUsage 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="subscriptions-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-5"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Subscriptions
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <dl
            aria-label="Subscriptions title"
            class="pf-v6-c-description-list pf-m-3-col"
            data-ouia-component-id="Subscriptions title"
          >
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  SLA
                </span>
              </dt>
              <dd
                aria-label="SLA value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="SLA value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  Self-Support
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Role
                </span>
              </dt>
              <dd
                aria-label="Role value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Role value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  Red Hat Enterprise Linux Server
                </div>
              </dd>
            </div>
          </dl>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SubscriptionCard should render correctly - loading 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="subscriptions-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-1"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Subscriptions
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <dl
            aria-label="Subscriptions title"
            class="pf-v6-c-description-list pf-m-3-col"
            data-ouia-component-id="Subscriptions title"
          >
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Usage
                </span>
              </dt>
              <dd
                aria-label="Usage value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Usage value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  <div
                    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                  >
                    <span
                      class="pf-v6-screen-reader"
                    />
                  </div>
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  SLA
                </span>
              </dt>
              <dd
                aria-label="SLA value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="SLA value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  <div
                    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                  >
                    <span
                      class="pf-v6-screen-reader"
                    />
                  </div>
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Role
                </span>
              </dt>
              <dd
                aria-label="Role value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Role value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  <div
                    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                  >
                    <span
                      class="pf-v6-screen-reader"
                    />
                  </div>
                </div>
              </dd>
            </div>
          </dl>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SubscriptionCard should render correctly with data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="subscriptions-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-3"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Subscriptions
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <dl
            aria-label="Subscriptions title"
            class="pf-v6-c-description-list pf-m-3-col"
            data-ouia-component-id="Subscriptions title"
          >
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Usage
                </span>
              </dt>
              <dd
                aria-label="Usage value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Usage value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  Development
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  SLA
                </span>
              </dt>
              <dd
                aria-label="SLA value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="SLA value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  Self-Support
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Role
                </span>
              </dt>
              <dd
                aria-label="Role value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Role value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  Red Hat Enterprise Linux Server
                </div>
              </dd>
            </div>
          </dl>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
